# perturbative-waveguide-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: compare_lumerical_sellmeier.py  example_perturbative_neff.py  example_slab_modes.py
examples/data/: Si3N4_lamb-n-k.txt  SiO2_lamb-n-k.txt  Si_Sustrato-Mimi.txt  guia_lum_ajustado_Sellmeier_TM_h1p0_w2p0_100pts.mat
src/perturbative_waveguides/: __init__.py  perturbation.py  slab.py
tests/: test_basic.py
