[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbative-waveguide-toolkit"
version = "0.1.0"
description = "Early-stage Python toolkit for perturbative effective-index analysis of integrated photonic waveguides."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Francisco A. Dominguez-Serna"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "matplotlib>=3.6"
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
